# smart-speaker

./: .gitignore  CMakeLists.txt  asr_keywords_utf8.txt  asrdemo.c  asrdemo.h  commander.h  executor.h  main.c  speaker.asr.c  speaker.asr.h  speaker.c  speaker.cmd.c  speaker.cooker.h  speaker.h  speaker.main.c
3rd-libs/lib/weather/: weather.py
conf/: asr_keywords_utf8.txt
src/: speaker.asr.c  speaker.asr.h  speaker.c  speaker.cmd.c  speaker.cmd.h  speaker.cooker.c  speaker.h  speaker.main.c  speaker.tts.c  speaker.tts.h  speaker.waiter.c  speaker.waiter.h
